DPO-2050 maintenance lambdaksi (#98)
- db changes
- V1 refactoring
- cache for routes and latest apis